# ML-Model-as-Product

./: .gitignore  README.md  makefile  mlpipeline_demonstration.ipynb  pyproject.toml
artifacts/model/: encoder.pkl  xgb_model.model
src/: mlpipeline.py
tests/: pytest_mlpipeline.py  test_mlpipeline.py
