[tool.poetry]
name = "mlpipeline"
version = "0.1.0"
description = ""
authors = ["Kabeer Akande"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
xgboost = "^2.0.0"
google-cloud-storage = "^2.11.0"
joblib = "^1.3.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
